packages/smtc_windows/macos/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer {
  const void *ptr;
} wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer;
typedef struct wire_SMTCConfig {
  bool play_enabled;
  bool pause_enabled;
  bool stop_enabled;
  bool next_enabled;
  bool prev_enabled;
  bool fast_forward_enabled;
  bool rewind_enabled;
} wire_SMTCConfig;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_MusicMetadata {
  struct wire_uint_8_list *title;
  struct wire_uint_8_list *artist;
  struct wire_uint_8_list *album;
  struct wire_uint_8_list *album_artist;
  uint32_t track_number;
  struct wire_uint_8_list *thumbnail;
} wire_MusicMetadata;
typedef struct wire_PlaybackTimeline {
  int64_t start_time_ms;
  int64_t end_time_ms;
  int64_t position_ms;
  int64_t *min_seek_time_ms;
  int64_t *max_seek_time_ms;
} wire_PlaybackTimeline;
const void *share_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer(const void *ptr);
void free_WireSyncReturn(WireSyncReturn ptr);