packages/smtc_windows/lib/src/bridge_generated.io.dart


  late final _share_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayerPtr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>>('share_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer');
  late final _share_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayer = _share_opaque_StdSyncMutexWindowsMediaPlaybackMediaPlayerPtr.asFunction<ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>)>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr = _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>('free_WireSyncReturn');
  late final _free_WireSyncReturn = _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

class _Dart_Handle extends ffi.Opaque {}

class wire_StdSyncMutexWindowsMediaPlaybackMediaPlayer extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

class wire_SMTCConfig extends ffi.Struct {
  @ffi.Bool()
  external bool play_enabled;

  @ffi.Bool()
  external bool pause_enabled;

  @ffi.Bool()
  external bool stop_enabled;

  @ffi.Bool()
  external bool next_enabled;

  @ffi.Bool()
  external bool prev_enabled;

  @ffi.Bool()
  external bool fast_forward_enabled;

  @ffi.Bool()
  external bool rewind_enabled;
}

class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

class wire_MusicMetadata extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> title;

  external ffi.Pointer<wire_uint_8_list> artist;

  external ffi.Pointer<wire_uint_8_list> album;

  external ffi.Pointer<wire_uint_8_list> album_artist;

  @ffi.Uint32()
  external int track_number;

  external ffi.Pointer<wire_uint_8_list> thumbnail;
}

class wire_PlaybackTimeline extends ffi.Struct {
  @ffi.Int64()
  external int start_time_ms;

  @ffi.Int64()
  external int end_time_ms;

  @ffi.Int64()
  external int position_ms;

  external ffi.Pointer<ffi.Int64> min_seek_time_ms;

  external ffi.Pointer<ffi.Int64> max_seek_time_ms;
}

typedef DartPostCObjectFnType = ffi.Pointer<ffi.NativeFunction<ffi.Bool Function(DartPort port_id, ffi.Pointer<ffi.Void> message)>>;
typedef DartPort = ffi.Int64;
